syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Insert (EmployeeInsertRequest) returns (EmployeeInsertReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message EmployeeInsertRequest{	
	string name = 1;
	string email = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message EmployeeInsertReply{
	bool inserted = 1;
}
